# etl-pipeline

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  scan.xml
__src/app/: __init__.py  bootstrap.py  manager.py
__src/infrastructure/: registry.py
__tests/: conftest.py
__tests/prototype/: test_astar.py  test_config.py  test_dataclasses.py
__tests/unit/: test_envelope.py  test_evaluate_urls.py  test_fascade.py  test_local_file_stream.py  test_registry.py  test_remote_http_stream.py
docs/: architecture_map.md  cred.md  middleware_architecture.md  middleware_spec.md  modular_registration_spec.md  pipeline_orchestration.md  pipeline_project_status.md  provider_pattern_guide.md  versioning.md
docs/architecture/: component_model.md  design_patterns.md  large_file_streaming.md  layered_entry_strategy.md  local_file_resolution_strategy.md  metadata_strategy.md  philosophy.md  pipeline_orchestration_strategy.md  resource_boundary_and_registry.md  type_and_regime_management.md  workflow_mapping.md
docs/implementation/: components.md  domain_specific_wrappers.md  envelope_pattern.md  job_orchestration.md  layered_entry_details.md  logging_strategy.md  middleware_contracts.md  middleware_examples.md  middleware_patterns.md  middleware_strategy.md  pipeline_execution_plan.md  pipeline_orchestration.md  pipeline_subsystem_blueprint.md  pipeline_validation.md  settings_resolution.md  smart_gateway_strategy.md  telemetry.md
docs/use_cases/: stream_client_examples.md
src/: __init__.py
src/app/: __init__.py  bootstrap.py  (+2 more)
(+101 files in other folders)
