[project]
name = "streamflow-framework"
version = "1.0.0"
description = "A high-resolution DataStream orchestration framework."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
