[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamflow-framework"
dynamic = ["version"]
description = "A high-resolution DataStream orchestration framework."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.version]
path = "src/__init__.py"
